--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "vee-validate": "^3.3.5"
   },
   "devDependencies": {
-    "@nuxt/typescript-build": "^1.0.3"
+    "@nuxt/typescript-build": "^1.0.3",
+    "node-sass": "^4.14.1",
+    "pug": "^3.0.0",
+    "pug-plain-loader": "^1.0.0",
+    "sass-loader": "^8.0.2"
   }
 }
