--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.11.0",
     "axios": "^0.19.2",
+    "bootstrap-vue": "^2.15.0",
     "nuxt": "^2.13.0",
     "vee-validate": "^3.3.5"
   },
